fixed contrast issue

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ li {
 
 section {
     background-color: rgb(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 p {
@@ -149,13 +150,31 @@ header {
 .dark-theme .section__sub-title,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-circle-half-stroke,
-.dark-theme .header__para 
+.dark-theme .header__para
 {
     color:white;
 }
 
 .dark-theme section{
     background-color:#242424;
+}
+
+.dark-theme #personal-logo {
+    filter:none;
+}
+
+.dark-theme .scroll__icon {
+    border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+    background-color: white;
+}
+
+.dark-theme .mail__btn {
+    background-color:white; 
+    color:#242424;
 }
 
 /* 
